// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header Snapshot Tests > matches snapshot with no notifications 1`] = `
<header
  class="border-b border-purple-500/20 backdrop-blur-sm bg-slate-900/50 sticky top-0 z-50"
>
  <div
    class="container mx-auto px-4"
  >
    <div
      class="flex items-center justify-between py-3"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="w-10 h-10 bg-gradient-to-r from-yellow-400 to-orange-500 rounded-lg flex items-center justify-center shadow-lg shadow-purple-500/20"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-coins w-6 h-6 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.744 17.736a6 6 0 1 1-7.48-7.48"
            />
            <path
              d="M15 6h1v4"
            />
            <path
              d="m6.134 14.768.866-.5 2 3.464"
            />
            <circle
              cx="16"
              cy="8"
              r="6"
            />
          </svg>
        </div>
        <div>
          <h1
            class="text-lg font-bold text-white"
          >
            CryptoFaucet Hub
          </h1>
          <p
            class="text-xs text-purple-300"
          >
            Automation Platform
          </p>
        </div>
      </div>
      <div
        class="hidden md:flex items-center flex-1 max-w-md mx-8 relative"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search absolute left-3 w-4 h-4 transition-colors text-purple-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <input
          aria-label="Buscar faucets"
          class="w-full pl-10 pr-10 py-2 bg-slate-800/50 border border-purple-500/20 rounded-lg text-white placeholder-purple-400 focus:border-purple-500 focus:outline-none focus:ring-2 focus:ring-purple-400 text-sm"
          placeholder="Buscar faucets..."
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center gap-3"
      >
        <button
          aria-label="Notificaciones"
          class="relative p-2 text-purple-300 hover:text-white transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-bell w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.268 21a2 2 0 0 0 3.464 0"
            />
            <path
              d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
            />
          </svg>
        </button>
        <button
          aria-label="Cambiar tema"
          class="p-2 bg-slate-800 rounded-lg text-purple-300 hover:text-white transition-colors"
          title="Cambiar tema"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-sun w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="4"
            />
            <path
              d="M12 2v2"
            />
            <path
              d="M12 20v2"
            />
            <path
              d="m4.93 4.93 1.41 1.41"
            />
            <path
              d="m17.66 17.66 1.41 1.41"
            />
            <path
              d="M2 12h2"
            />
            <path
              d="M20 12h2"
            />
            <path
              d="m6.34 17.66-1.41 1.41"
            />
            <path
              d="m19.07 4.93-1.41 1.41"
            />
          </svg>
        </button>
        <button
          class="px-3 py-1.5 bg-slate-800 rounded-lg text-purple-300 hover:text-white transition-colors text-sm font-medium"
        >
          ES
        </button>
        <div
          class="flex items-center gap-3 pl-3 border-l border-purple-500/20"
        >
          <div
            class="text-right hidden sm:block"
          >
            <p
              class="text-white font-medium text-sm"
            >
              CryptoUser123
            </p>
            <p
              class="text-purple-300 text-xs"
            >
              Nivel 
              12
            </p>
          </div>
          <div
            class="w-10 h-10 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full flex items-center justify-center text-xl shadow-lg"
          >
            🦊
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="User stats"
      class="flex items-center gap-4 py-3 border-t border-purple-500/10"
      role="navigation"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-flame w-4 h-4 text-orange-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          Racha: 5 días
        </span>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-star w-4 h-4 text-yellow-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          2450
          /
          5000
           XP
        </span>
      </div>
      <div
        class="flex-1 bg-slate-800 rounded-full h-2 max-w-xs"
      >
        <div
          class="bg-gradient-to-r from-purple-500 to-pink-500 h-2 rounded-full transition-all"
          style="width: 49%;"
        />
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-users w-4 h-4 text-green-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <path
            d="M16 3.128a4 4 0 0 1 0 7.744"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          24
           referidos
        </span>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header Snapshot Tests > matches snapshot with user and English language 1`] = `
<header
  class="border-b border-purple-500/20 backdrop-blur-sm bg-slate-900/50 sticky top-0 z-50"
>
  <div
    class="container mx-auto px-4"
  >
    <div
      class="flex items-center justify-between py-3"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="w-10 h-10 bg-gradient-to-r from-yellow-400 to-orange-500 rounded-lg flex items-center justify-center shadow-lg shadow-purple-500/20"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-coins w-6 h-6 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.744 17.736a6 6 0 1 1-7.48-7.48"
            />
            <path
              d="M15 6h1v4"
            />
            <path
              d="m6.134 14.768.866-.5 2 3.464"
            />
            <circle
              cx="16"
              cy="8"
              r="6"
            />
          </svg>
        </div>
        <div>
          <h1
            class="text-lg font-bold text-white"
          >
            CryptoFaucet Hub
          </h1>
          <p
            class="text-xs text-purple-300"
          >
            Automation Platform
          </p>
        </div>
      </div>
      <div
        class="hidden md:flex items-center flex-1 max-w-md mx-8 relative"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search absolute left-3 w-4 h-4 transition-colors text-purple-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <input
          aria-label="Search faucets"
          class="w-full pl-10 pr-10 py-2 bg-slate-800/50 border border-purple-500/20 rounded-lg text-white placeholder-purple-400 focus:border-purple-500 focus:outline-none focus:ring-2 focus:ring-purple-400 text-sm"
          placeholder="Search faucets..."
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center gap-3"
      >
        <button
          aria-label="Notifications"
          class="relative p-2 text-purple-300 hover:text-white transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-bell w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.268 21a2 2 0 0 0 3.464 0"
            />
            <path
              d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle theme"
          class="p-2 bg-slate-800 rounded-lg text-purple-300 hover:text-white transition-colors"
          title="Toggle theme"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-sun w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="4"
            />
            <path
              d="M12 2v2"
            />
            <path
              d="M12 20v2"
            />
            <path
              d="m4.93 4.93 1.41 1.41"
            />
            <path
              d="m17.66 17.66 1.41 1.41"
            />
            <path
              d="M2 12h2"
            />
            <path
              d="M20 12h2"
            />
            <path
              d="m6.34 17.66-1.41 1.41"
            />
            <path
              d="m19.07 4.93-1.41 1.41"
            />
          </svg>
        </button>
        <button
          class="px-3 py-1.5 bg-slate-800 rounded-lg text-purple-300 hover:text-white transition-colors text-sm font-medium"
        >
          EN
        </button>
        <div
          class="flex items-center gap-3 pl-3 border-l border-purple-500/20"
        >
          <div
            class="text-right hidden sm:block"
          >
            <p
              class="text-white font-medium text-sm"
            >
              CryptoUser123
            </p>
            <p
              class="text-purple-300 text-xs"
            >
              Nivel 
              12
            </p>
          </div>
          <div
            class="w-10 h-10 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full flex items-center justify-center text-xl shadow-lg"
          >
            🦊
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="User stats"
      class="flex items-center gap-4 py-3 border-t border-purple-500/10"
      role="navigation"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-flame w-4 h-4 text-orange-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          Racha: 5 días
        </span>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-star w-4 h-4 text-yellow-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          2450
          /
          5000
           XP
        </span>
      </div>
      <div
        class="flex-1 bg-slate-800 rounded-full h-2 max-w-xs"
      >
        <div
          class="bg-gradient-to-r from-purple-500 to-pink-500 h-2 rounded-full transition-all"
          style="width: 49%;"
        />
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-users w-4 h-4 text-green-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <path
            d="M16 3.128a4 4 0 0 1 0 7.744"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          24
           referidos
        </span>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header Snapshot Tests > matches snapshot with user and Spanish language 1`] = `
<header
  class="border-b border-purple-500/20 backdrop-blur-sm bg-slate-900/50 sticky top-0 z-50"
>
  <div
    class="container mx-auto px-4"
  >
    <div
      class="flex items-center justify-between py-3"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="w-10 h-10 bg-gradient-to-r from-yellow-400 to-orange-500 rounded-lg flex items-center justify-center shadow-lg shadow-purple-500/20"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-coins w-6 h-6 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.744 17.736a6 6 0 1 1-7.48-7.48"
            />
            <path
              d="M15 6h1v4"
            />
            <path
              d="m6.134 14.768.866-.5 2 3.464"
            />
            <circle
              cx="16"
              cy="8"
              r="6"
            />
          </svg>
        </div>
        <div>
          <h1
            class="text-lg font-bold text-white"
          >
            CryptoFaucet Hub
          </h1>
          <p
            class="text-xs text-purple-300"
          >
            Automation Platform
          </p>
        </div>
      </div>
      <div
        class="hidden md:flex items-center flex-1 max-w-md mx-8 relative"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search absolute left-3 w-4 h-4 transition-colors text-purple-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <input
          aria-label="Buscar faucets"
          class="w-full pl-10 pr-10 py-2 bg-slate-800/50 border border-purple-500/20 rounded-lg text-white placeholder-purple-400 focus:border-purple-500 focus:outline-none focus:ring-2 focus:ring-purple-400 text-sm"
          placeholder="Buscar faucets..."
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center gap-3"
      >
        <button
          aria-label="Notificaciones"
          class="relative p-2 text-purple-300 hover:text-white transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-bell w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.268 21a2 2 0 0 0 3.464 0"
            />
            <path
              d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
            />
          </svg>
          <span
            class="absolute -top-1 -right-1 w-5 h-5 bg-red-500 rounded-full text-xs text-white flex items-center justify-center"
          >
            3
          </span>
        </button>
        <button
          aria-label="Cambiar tema"
          class="p-2 bg-slate-800 rounded-lg text-purple-300 hover:text-white transition-colors"
          title="Cambiar tema"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-sun w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="4"
            />
            <path
              d="M12 2v2"
            />
            <path
              d="M12 20v2"
            />
            <path
              d="m4.93 4.93 1.41 1.41"
            />
            <path
              d="m17.66 17.66 1.41 1.41"
            />
            <path
              d="M2 12h2"
            />
            <path
              d="M20 12h2"
            />
            <path
              d="m6.34 17.66-1.41 1.41"
            />
            <path
              d="m19.07 4.93-1.41 1.41"
            />
          </svg>
        </button>
        <button
          class="px-3 py-1.5 bg-slate-800 rounded-lg text-purple-300 hover:text-white transition-colors text-sm font-medium"
        >
          ES
        </button>
        <div
          class="flex items-center gap-3 pl-3 border-l border-purple-500/20"
        >
          <div
            class="text-right hidden sm:block"
          >
            <p
              class="text-white font-medium text-sm"
            >
              CryptoUser123
            </p>
            <p
              class="text-purple-300 text-xs"
            >
              Nivel 
              12
            </p>
          </div>
          <div
            class="w-10 h-10 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full flex items-center justify-center text-xl shadow-lg"
          >
            🦊
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="User stats"
      class="flex items-center gap-4 py-3 border-t border-purple-500/10"
      role="navigation"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-flame w-4 h-4 text-orange-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          Racha: 5 días
        </span>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-star w-4 h-4 text-yellow-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          2450
          /
          5000
           XP
        </span>
      </div>
      <div
        class="flex-1 bg-slate-800 rounded-full h-2 max-w-xs"
      >
        <div
          class="bg-gradient-to-r from-purple-500 to-pink-500 h-2 rounded-full transition-all"
          style="width: 49%;"
        />
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-users w-4 h-4 text-green-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <path
            d="M16 3.128a4 4 0 0 1 0 7.744"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          24
           referidos
        </span>
      </div>
    </div>
  </div>
</header>
`;
